--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,9 +18,9 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
+  color: #606c71;
+  background-color: white;
+  border-color: #606c71;
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
@@ -29,10 +29,8 @@ a {
     margin-left: 1rem; }
 
 .btn:hover {
-  color: rgba(255, 255, 255, 0.8);
-  text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: rgba(255, 255, 255, 0.3); }
+  text-decoration: underline;
+}
 
 @media screen and (min-width: 64em) {
   .btn {
@@ -73,8 +71,17 @@ a {
 
 .project-name {
   margin-top: 0;
-  margin-bottom: 0.1rem; }
+  margin-bottom: 0.1rem;
+  color: #606c71; }
 
+h1 span { 
+    background-color: white; 
+}
+
+h2 span { 
+    background-color: white; 
+}
+	
 @media screen and (min-width: 64em) {
   .project-name {
     font-size: 3.25rem; } }
@@ -90,7 +97,7 @@ a {
 .project-tagline {
   margin-bottom: 2rem;
   font-weight: normal;
-  opacity: 0.7; }
+  color: #606c71; }
 
 @media screen and (min-width: 64em) {
   .project-tagline {
