--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -18,8 +18,8 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: #606c71;
-  background-color: white;
+  color: white;
+  background-color: black;
   border-color: #606c71;
   border-style: solid;
   border-width: 1px;
@@ -72,14 +72,15 @@ a {
 .project-name {
   margin-top: 0;
   margin-bottom: 0.1rem;
-  color: #606c71; }
+  color: white;
+}
 
 h1 span { 
-    background-color: white; 
+    background-color: black; 
 }
 
 h2 span { 
-    background-color: white; 
+    background-color: black; 
 }
 	
 @media screen and (min-width: 64em) {
@@ -97,19 +98,19 @@ h2 span {
 .project-tagline {
   margin-bottom: 2rem;
   font-weight: normal;
-  color: #606c71; }
+  color: white; }
 
 @media screen and (min-width: 64em) {
   .project-tagline {
-    font-size: 1.25rem; } }
+    font-size: 1.45rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-tagline {
-    font-size: 1.15rem; } }
+    font-size: 1.35rem; } }
 
 @media screen and (max-width: 42em) {
   .project-tagline {
-    font-size: 1rem; } }
+    font-size: 1.15rem; } }
 
 .main-content :first-child {
   margin-top: 0; }
